--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --sacondColor:#FFDE00;
 }
+
 
 @theme inline {
   --color-background: var(--background);
@@ -20,7 +22,14 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: url('../public/assets/body-bg.png');
+  background-repeat: repeat-y;
+  background-color: #e7e7e7;
+  color: var(--background);
+
+  font-family: var(--Main-Font),sans-serif;
+}
+
+.saconderybg{
+  background-color:var(--sacondColor);
 }
