--- a/app/globals.css
+++ b/app/globals.css
@@ -45,3 +45,7 @@ a, button, [role="button"], [role="link"] {
   background-color:var(--sacondColor);
 }
 
+.shadow-main:hover{
+   box-shadow: #0a0a0a 0 10px 0;
+   transition: all 0.6s ;
+}
